Update README, add disclaimer and configure shaded name